Menu Alignment issue fixed

--- a/src/app/Core/Components/header/header.component.scss
+++ b/src/app/Core/Components/header/header.component.scss
@@ -9,7 +9,6 @@ $black : #212322;
         align-items: center;
         max-width: 1300px;
         margin: auto;
-        margin-right: 25px;
         *{
             transition: 0.4s;
         }
